navbar page not found

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -105,3 +105,13 @@ a {
     color-scheme: dark;
   }
 } */
+nav {
+  display: flex;
+  justify-content: space-between;
+}
+li {
+  margin-right: 10px;
+  display: inline-block;
+}
+
+
